--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,37 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Soveu
+email: panrosolek@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Just a blog about IT, security and stuff
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: jsoveu
+github_username:  Soveu
 
 # Build settings
 markdown: kramdown
-theme: minima
 plugins:
   - jekyll-feed
+
+sass:
+  style: compressed
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+      title: "No title"
+  -
+    scope:
+      path: "asm"
+      type: "posts"
+    values:
+      categories: "asm"
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
