--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ email: panrosolek@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Just a blog about IT, security and stuff
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jsoveu
+url: "https://soveu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: getowled
 github_username:  Soveu
 
 # Build settings
